# P1-2024

./: .gitignore  Algorithms.c  Algorithms.h  CMakeLists.txt  CMakePresets.json  P1.c  P1.h  README.md  UserData.c  UserData.h  UserSpace.c  UserSpace.h  exercises.c  exercises.h  hashmap.c  hashmap.h  progress_report.c  progress_report.h  testcases.c  workout_program.c  workout_program.h
userfiles/: CMakeLists.txt
